# fastapi-blueprint

./: .env.example  Makefile  README.md  main.py  manage.py  pyproject.toml  requirements-dev.txt  run.py  seed.py
.github/workflows/: ci.yml
app/api/v1/router/: __init__.py
app/api/v1/routers/: auth_router.py  example_router.py
app/commands/: base.py  kernel.py
app/core/: config.py  dependencies.py  exception_handler.py  logging.py  middleware.py  permissions.py  rate_limit.py  security.py
app/db/: pagination.py  session.py
app/filters/: __init__.py  base.py  example_filter.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py
app/models/: example.py  user.py
app/repositories/: __init__.py  base.py  example_repository.py  user_repository.py
app/schemas/: __init__.py  example.py  user.py
app/seeders/: example_seeder.py  kernel.py
app/services/: __init__.py  example_service.py  user_service.py
app/tests/: conftest.py
app/tests/factories/: __init__.py  example_factory.py
app/tests/test_core/: test_rate_limit.py
app/tests/test_repositories/: test_example_repository.py
app/tests/test_routes/: conftest.py  test_auth_routes.py  test_example_routes.py
app/tests/test_services/: conftest.py  test_example_service.py
