[project]
name = "fastapi-blueprint"
version = "1.0.0"
description = "Reusable FastAPI blueprint — auth + example resource scaffold."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
# B008: FastAPI intentionally calls Depends()/Query() in argument defaults.
# UP046/UP047: keep classic Generic[T]/TypeVar style over PEP 695 syntax.
ignore = ["B008", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
# Entry-point scripts call load_dotenv() before importing app modules.
"run.py" = ["E402"]
"seed.py" = ["E402"]
"manage.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
exclude = ["app/migrations/", "app/tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
